Fixed bug that caused the popular items to show incorrectly on iPhone 6 plus devices

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -217,6 +217,7 @@ main {
   .list-popular-item {
     display: flex;
     flex-wrap: wrap;
+    width: 100%;
 
     .popular-item-logo {
       width: 35%;
